renaming bgs to osc

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
 
     # Data Product
-    bgs-dm-search-srv:
+    osc-dm-search-srv:
         image: ${DOCKERHUB_USERNAME}/${IMAGE_NAME}:latest
         hostname: ${HOSTNAME}
         # container_name: ${HOSTNAME}
